--- a/CNS.ipynb
+++ b/CNS.ipynb
@@ -25,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFp7W3y5epES",
-        "outputId": "5fbf567e-ad3c-4ccf-b710-9f7e6b8de854"
+        "outputId": "820f66e2-938b-4b17-86c1-390e22f04503"
       },
       "outputs": [
         {
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSghl9oTfRwE",
-        "outputId": "77d9cdb8-a30d-47a6-e5bf-d6ed8f256033"
+        "outputId": "effee3fd-83e8-40eb-8677-cec7f3aabb8b"
       },
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJQEh2qMfWdo",
-        "outputId": "b58e4ae6-7185-4df9-88db-283f3e1f386e"
+        "outputId": "d27f4dd0-d657-447d-9304-4cbee942bc12"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ieclD2yPffhV",
-        "outputId": "aa1b91cf-9078-4e65-cc81-41799ac1d80e"
+        "outputId": "7fef029a-b0e2-4e32-a51c-a327e7175dfc"
       },
-      "execution_count": 4,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,6 +279,49 @@
     {
       "cell_type": "code",
       "source": [
+        "#des--simple\n",
+        "from Crypto.Cipher import DES\n",
+        "from Crypto.Util.Padding import pad, unpad\n",
+        "from Crypto.Random import get_random_bytes\n",
+        "\n",
+        "des_key = get_random_bytes(8)\n",
+        "des_cipher = DES.new(des_key, DES.MODE_ECB)\n",
+        "\n",
+        "plaintext = b\"HelloWorld\"\n",
+        "padded_plaintext = pad(plaintext, DES.block_size)\n",
+        "ciphertext = des_cipher.encrypt(padded_plaintext)\n",
+        "decrypted_padded_text = des_cipher.decrypt(ciphertext)\n",
+        "decrypted_text = unpad(decrypted_padded_text, DES.block_size)\n",
+        "\n",
+        "print(f\"DES Key: {des_key.hex()}\")\n",
+        "print(f\"Original Plaintext: {plaintext}\")\n",
+        "print(f\"Ciphertext (Hex): {ciphertext.hex()}\")\n",
+        "print(f\"Decrypted Plaintext: {decrypted_text.decode()}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nwWs-JRk0CXU",
+        "outputId": "e2edb8af-609c-4389-aabb-36f060e57a76"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DES Key: 29e76ce1a7226c72\n",
+            "Original Plaintext: b'HelloWorld'\n",
+            "Ciphertext (Hex): 903e7eb4c6d846ef087325fa5cf127d7\n",
+            "Decrypted Plaintext: HelloWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Triple DES encryption algorithms.\n",
         "from Crypto.Cipher import DES3\n",
         "from Crypto.Util.Padding import pad, unpad\n",
@@ -331,6 +374,49 @@
             "Triple DES Key: cd4570fd0dada8857551299137e667640e2f0b4086f8a1f4\n",
             "Original Plaintext: b'HelloWorld'\n",
             "Ciphertext (Hex): 74c30ebde71ebd5dc28280d33a77f00d\n",
+            "Decrypted Plaintext: HelloWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#triple des--simple\n",
+        "from Crypto.Cipher import DES3\n",
+        "from Crypto.Util.Padding import pad, unpad\n",
+        "from Crypto.Random import get_random_bytes\n",
+        "\n",
+        "triple_des_key = DES3.adjust_key_parity(get_random_bytes(24))\n",
+        "triple_des_cipher = DES3.new(triple_des_key, DES3.MODE_ECB)\n",
+        "\n",
+        "plaintext = b\"HelloWorld\"\n",
+        "padded_plaintext = pad(plaintext, DES3.block_size)\n",
+        "ciphertext = triple_des_cipher.encrypt(padded_plaintext)\n",
+        "decrypted_padded_text = triple_des_cipher.decrypt(ciphertext)\n",
+        "decrypted_text = unpad(decrypted_padded_text, DES3.block_size)\n",
+        "\n",
+        "print(f\"Triple DES Key: {triple_des_key.hex()}\")\n",
+        "print(f\"Original Plaintext: {plaintext}\")\n",
+        "print(f\"Ciphertext (Hex): {ciphertext.hex()}\")\n",
+        "print(f\"Decrypted Plaintext: {decrypted_text.decode()}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "io8k_ys60kgw",
+        "outputId": "b626d018-18c8-424f-f9a0-d8b62f5ff22a"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Triple DES Key: 54df98834a89292f766d9b10d5bad931b5dce586623d254c\n",
+            "Original Plaintext: b'HelloWorld'\n",
+            "Ciphertext (Hex): 6e8cbd028bd5ea6a59107919fb8e6bc8\n",
             "Decrypted Plaintext: HelloWorld\n"
           ]
         }
@@ -431,6 +517,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#RSA--simple\n",
+        "import random\n",
+        "from sympy import mod_inverse\n",
+        "\n",
+        "primes = [i for i in range(100, 300) if all(i % j != 0 for j in range(2, int(i**0.5) + 1))]\n",
+        "p = random.choice(primes)\n",
+        "q = random.choice(primes)\n",
+        "\n",
+        "n = p * q\n",
+        "phi_n = (p - 1) * (q - 1)\n",
+        "e = random.choice([i for i in range(2, phi_n) if all(i % j != 0 for j in range(2, int(i**0.5) + 1)) and phi_n % i != 0])\n",
+        "d = mod_inverse(e, phi_n)\n",
+        "\n",
+        "public_key = (e, n)\n",
+        "private_key = (d, n)\n",
+        "\n",
+        "message = \"HELLO\"\n",
+        "encrypted_message = [pow(ord(char), e, n) for char in message]\n",
+        "decrypted_message = ''.join([chr(pow(char, d, n)) for char in encrypted_message])\n",
+        "\n",
+        "print(\"Public Key:\", public_key)\n",
+        "print(\"Private Key:\", private_key)\n",
+        "print(\"Original Message:\", message)\n",
+        "print(\"Encrypted Message:\", encrypted_message)\n",
+        "print(\"Decrypted Message:\", decrypted_message)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9msSQduz3I9p",
+        "outputId": "eeb83a4d-9afc-4901-8cec-5cf486f21b1b"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Public Key: (7703, 22927)\n",
+            "Private Key: (10967, 22927)\n",
+            "Original Message: HELLO\n",
+            "Encrypted Message: [12173, 21469, 12756, 12756, 15612]\n",
+            "Decrypted Message: HELLO\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Diffie Hellman Key Exchange Algorithm"
@@ -498,6 +635,57 @@
             "Party B's public key: 13\n",
             "Shared secret computed by Party A: 12\n",
             "Shared secret computed by Party B: 12\n",
+            "Shared secrets match!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#deffie hellman key exchange--simple\n",
+        "import random\n",
+        "\n",
+        "p = 23\n",
+        "g = 5\n",
+        "\n",
+        "private_key_a = random.randint(1, p - 1)\n",
+        "public_key_a = pow(g, private_key_a, p)\n",
+        "\n",
+        "private_key_b = random.randint(1, p - 1)\n",
+        "public_key_b = pow(g, private_key_b, p)\n",
+        "\n",
+        "shared_secret_a = pow(public_key_b, private_key_a, p)\n",
+        "shared_secret_b = pow(public_key_a, private_key_b, p)\n",
+        "\n",
+        "print(f\"Party A's private key: {private_key_a}\")\n",
+        "print(f\"Party A's public key: {public_key_a}\")\n",
+        "print(f\"Party B's private key: {private_key_b}\")\n",
+        "print(f\"Party B's public key: {public_key_b}\")\n",
+        "print(f\"Shared secret computed by Party A: {shared_secret_a}\")\n",
+        "print(f\"Shared secret computed by Party B: {shared_secret_b}\")\n",
+        "assert shared_secret_a == shared_secret_b, \"Shared secrets do not match!\"\n",
+        "print(\"Shared secrets match!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C0RQFBZ_zeUK",
+        "outputId": "df8bcdbf-8447-4d15-e1f1-437b85c40cff"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Party A's private key: 12\n",
+            "Party A's public key: 18\n",
+            "Party B's private key: 7\n",
+            "Party B's public key: 17\n",
+            "Shared secret computed by Party A: 6\n",
+            "Shared secret computed by Party B: 6\n",
             "Shared secrets match!\n"
           ]
         }
